# Rent-in-Brazil

./: .dockerignore  Brazil_houses_rental.ipynb  Brazil_houses_rental_Models.ipynb  Brazil_houses_rental_Models_Ukr.ipynb  Dockerfile  README.md  README.uk.md  app.py  pyproject.toml  requirements.txt
model/: elastic_model.pkl  encoder.pkl  lasso_model.pkl  linear_regression_model.pkl  ridge_model.pkl  svr_model.pkl  x_scaler.pkl  y_scaler.pkl
notebook/: Brazil_houses_rental.ipynb
notebook/ukr_folder/: Brazil_houses_rental_Models_Ukr.ipynb  check.py
rent-in-brazil/: app.py
ukr_folder/: Brazil_houses_rental_Models.ipynb
