[tool.poetry]
name = "rent-in-brazil"
version = "0.1.0"
description = "Predicting the cost of rent in Brazil"
authors = ["MariiaSam <kontragent@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
joblib = "^1.4.2"
streamlit = "^1.41.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
